<resources>
    <string name="app_name">Projemanag</string>
    <string name="task_image">Task image</string>
    <string name="let_s_get_started">Let\'s get started</string>
    <string name="collaborate_and_plan_together_across_multiple_devices_on_projemanag_s_minimalist_interface">Collaborate and Plan Together Across Multiple Devices on Projemanag\'s Minimalist Interface.</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="enter_your_name_email_and_password_to_register_with_us">Enter your name, email and password to register with us.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="enter_your_email_and_password_to_sign_in_with_us">Enter your email and password to sign in with us.</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="please_wait">Please wait…</string>
    <string name="my_profile">My Profile</string>
    <string name="sign_out">Sign out</string>
    <string name="profile_image">Profile image</string>
    <string name="update">Update</string>
    <string name="create_board">Create Board</string>
    <string name="create">Create</string>
    <string name="board_name">Board Name</string>
    <string name="add_board">Add Board</string>
    <string name="no_boards_available">No Boards available!</string>
    <string name="board_image">Board Image</string>
    <string name="add_list">Add List</string>
    <string name="image">Image</string>
    <string name="list_name">List Name</string>
    <string name="card_name">Card Name</string>
    <string name="add_card">Add Card</string>
    <string name="members">Members</string>
    <string name="member_image">Member Image</string>
    <string name="add_member">Add Member</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
    <string name="search_member">Search Member</string>
    <string name="details">Details</string>
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="delete_card">Delete Card</string>
    <string name="checked">Check</string>
    <string name="default_notification_channel_id">projemanag_notification_channel_id</string>

</resources>