<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    android:orientation="vertical"
    android:padding="@dimen/global_padding"
    android:gravity="center"
    tools:context=".activities.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_intro_screen"
        android:fontFamily="@font/audiowide"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/darkBlue"
        android:textSize="@dimen/header_text_intro_screen"
        android:textStyle="bold" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_intro_screen"
        android:contentDescription="@string/task_image"
        android:src="@drawable/ic_task_image" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_intro_screen"
        android:gravity="center"
        android:text="@string/let_s_get_started"
        android:textColor="@color/black"
        android:textSize="@dimen/header_two_text_intro_screen" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_intro_screen"
        android:gravity="center"
        android:text="@string/collaborate_and_plan_together_across_multiple_devices_on_projemanag_s_minimalist_interface"
        android:textColor="@color/dark"
        android:textSize="@dimen/paragraph_text_intro_screen" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_bottom_intro_screen"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:minHeight="@dimen/button_height_intro_screen"
        android:text="@string/sign_in"
        android:layout_marginTop="@dimen/margin_top_intro_screen"
        android:textColor="@color/white"
        android:textSize="@dimen/button_text_intro_screen"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_border"
        android:gravity="center"
        android:minHeight="@dimen/button_height_intro_screen"
        android:text="@string/sign_up"
        android:textColor="@color/blue"
        android:textSize="@dimen/button_text_intro_screen"
        android:textStyle="bold"
        tools:ignore="TextContrastCheck" />


</androidx.appcompat.widget.LinearLayoutCompat>