<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash_background"
    android:orientation="vertical"
    tools:context=".activities.CardDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/cardDetailSToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/darkBlue"
        android:gravity="center"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:text="@string/details"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_text_size"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/card_details_content_padding">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/card_details_cv_card_name_marginBottom"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_details_content_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/nameLayoutCardDetails"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/nameCardDetails"
                        style="@style/edit_text_sign_in_up"
                        android:hint="@string/card_name"
                        android:inputType="text"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="@dimen/card_view_elevation_radius"
            app:cardCornerRadius="@dimen/card_view_corner_radius">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:padding="@dimen/card_details_cv_content_padding">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_color"
                    android:textColor="@color/black"
                    android:textSize="@dimen/card_details_label_text_size" />

                <TextView
                    android:id="@+id/selectLabelColor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:text="@string/select_color"
                    android:textColor="@color/darkBlue"
                    android:textSize="@dimen/card_details_action_text_size"
                    tools:ignore="TextContrastCheck" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                    android:text="@string/members"
                    android:textColor="@color/black"
                    android:textSize="@dimen/card_details_label_text_size" />

                <TextView
                    android:id="@+id/selectMembers"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:text="@string/select_members"
                    android:textColor="@color/darkBlue"
                    android:textSize="@dimen/card_details_action_text_size"
                    tools:ignore="TextContrastCheck" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/selectedMembersList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_members_label_marginTop"
                    android:text="@string/due_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/card_details_label_text_size" />

                <TextView
                    android:id="@+id/selectDueDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/card_details_value_marginTop"
                    android:layout_marginBottom="@dimen/card_details_value_marginTop"
                    android:padding="@dimen/card_details_value_padding"
                    android:text="@string/select_due_date"
                    android:textColor="@color/darkBlue"
                    android:textSize="@dimen/card_details_action_text_size"
                    tools:ignore="TextContrastCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/update"
                    style="@style/sign_in_up_button_in_activities"
                    android:text="@string/update"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>


    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.appcompat.widget.LinearLayoutCompat>