<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_splash_background"
    android:orientation="vertical"
    tools:context=".activities.SignInActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/singUpToolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:gravity="center"
        tools:ignore="RtlSymmetry">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|start"
            android:text="@string/sign_in"
            android:textColor="@color/white"
            android:textSize="@dimen/toolbar_text_size"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/global_padding">

        <TextView
            style="@style/sign_in_up_description_text"
            android:text="@string/enter_your_email_and_password_to_sign_in_with_us"
            tools:ignore="TextContrastCheck" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardBackgroundColor="@color/white"
            app:cardCornerRadius="@dimen/card_view_corner_radius"
            app:cardElevation="@dimen/card_view_elevation_radius"
            app:cardUseCompatPadding="true">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="@dimen/global_padding">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/emailInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_top_intro_screen">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/email"
                        style="@style/edit_text_sign_in_up"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        tools:ignore="SpeakableTextPresentCheck" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/passwordInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/margin_bottom_intro_screen">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/password"
                        style="@style/edit_text_sign_in_up"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        tools:ignore="SpeakableTextPresentCheck" />
                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/signUp"
                    style="@style/sign_in_up_button_in_activities"
                    android:text="@string/sign_in"
                    tools:ignore="TextContrastCheck,DuplicateSpeakableTextCheck" />

            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.cardview.widget.CardView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</androidx.appcompat.widget.LinearLayoutCompat>

