<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/shape_dialog_rounded"
        app:cardCornerRadius="@dimen/dialog_member_cv_cornerRadius"
        app:cardElevation="@dimen/dialog_member_cv_elevation">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dialog_member_content_padding">


            <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dialog_member_title_padding"
                android:textColor="@color/black"
                android:text="@string/add_member"
                android:textSize="@dimen/dialog_member_title_text_size"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_divider_height"
                android:layout_marginTop="@dimen/member_dialog_divider_marginTopBottom"
                android:layout_marginBottom="@dimen/member_dialog_divider_marginTopBottom"
                android:backgroundTint="@color/white" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailSearchInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/member_dialog_action_layout_margin_top_bottom"
                android:layout_marginBottom="@dimen/member_dialog_action_layout_margin_top_bottom">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/emailSearchMember"
                    style="@style/edit_text_sign_in_up"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textSize="@dimen/member_item_email_text_size"
                    tools:ignore="SpeakableTextPresentCheck" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="@dimen/member_dialog_action_layout_height"
                android:layout_marginTop="@dimen/member_dialog_til_email_marginTop"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/add"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_background"
                    android:gravity="center"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:text="@string/add"
                    android:textColor="@color/white"
                    android:textSize="@dimen/member_dialog_action_button_text_size"
                    tools:ignore="TextContrastCheck" />

                <View
                    android:layout_width="@dimen/member_dialog_button_divider"
                    android:layout_height="wrap_content" />

                <TextView
                    android:id="@+id/cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:gravity="center"
                    android:padding="@dimen/member_dialog_action_button_padding"
                    android:text="@string/cancel"
                    android:textColor="@color/black"
                    android:textSize="@dimen/member_dialog_action_button_text_size"
                    tools:ignore="TextContrastCheck" />
            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.cardview.widget.CardView>

</FrameLayout>